--- a/Design/css/hosterr.css
+++ b/Design/css/hosterr.css
@@ -30,6 +30,9 @@ span, ul, p{
 				padding:12px;
 				font-size:12px;
 }
+#flex-bar h1{       
+                                position:relative;
+} 
 #flex-bar input{
 				padding:12px;
 				border:none;
